Add question cycling with 100 questions pool and Previous/Next navigation buttons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <div class="question-meta">
                     <span class="question-number" id="questionNumber"></span>
                 </div>
+                <div class="question-navigation">
+                    <button class="nav-btn" id="prevBtn">← Previous</button>
+                    <button class="nav-btn" id="nextBtn">Next →</button>
+                </div>
             </section>
 
             <!-- Answer Section -->
