Convert all 100 questions to multiple choice format with selectable options and visual feedback

--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 
             <!-- Answer Section -->
             <section class="answer-section" id="answerSection">
-                <h3>Your Answer</h3>
-                <textarea 
-                    id="answerInput" 
-                    placeholder="Share your thoughts..."
-                    rows="5"
-                ></textarea>
-                <button class="submit-btn" id="submitBtn">Submit Answer</button>
+                <h3>Select Your Answer</h3>
+                <div class="multiple-choice-options" id="multipleChoiceOptions">
+                    <!-- Options will be dynamically generated -->
+                </div>
+                <button class="submit-btn" id="submitBtn" disabled>Submit Answer</button>
                 <div class="answer-status" id="answerStatus"></div>
             </section>
 
